--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Badminton Rankers</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="leaderboard_title">RANKERS LEADERBOARD</string>
+    <string name="history_title">MATCH HISTORY</string>
+    <string name="member_title">MEMBERS</string>
+    <string name="leaderboard">Leaderboard</string>
+    <string name="history">History</string>
+    <string name="member">Member</string>
 </resources>
