adding new member dialog sheet and updating string + themes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="leaderboard">Leaderboard</string>
     <string name="history">History</string>
     <string name="member">Member</string>
+    <string name="memberNameHint">Input Member Name</string>
+    <string name="addButton">Add</string>
+    <string name="addNewMemberTitle">Add New Member</string>
 </resources>
